--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -77,26 +77,54 @@
   width: 80%;
 }
 
-.scoring-board {
-  border: 1px solid crimson;
-}
-
-.img-block {
-  border: 1px solid darkblue;
-}
-
-button,
+.btn-rps,
 input[type="submit"] {
   cursor: pointer;
-  border: 1px solid crimson;
   padding: 5px 20px;
   border-radius: 2px;
   transition: 0.1s ease-out;
   cursor: pointer;
   color: white;
+}
 
-  &:hover {
-    background: crimson;
+.main-game {
+  text-align: center;
+  text-transform: capitalize;
+
+  h1 {
+    text-transform: uppercase;
+    font-weight: 800;
+  }
+  .scoring-board {
+    margin: 5px auto;
+
+    .main-score-panel {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      text-align: center;
+    }
+  }
+
+  .img-block {
+    padding: 5px 10px;
+    width: 1000px;
+    margin: 10px auto;
+    @include flex-center;
+    gap: 15px;
+
+    .btn-rps {
+      img {
+        padding: 25px 35px;
+        display: block;
+        border-radius: 100px;
+        transition: all 1s ease;
+
+        &:hover {
+          background: crimson;
+        }
+      }
+    }
   }
 }
 
